# hdx-mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  env.example  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
src/hdx_mcp_server/: __init__.py  __main__.py  server.py
src/hdx_mcp_server/prompts/: __init__.py  data_coverage_guidance.py  hdx_usage_instructions.py  population_guidance.py
src/hdx_mcp_server/resources/: __init__.py
src/hdx_mcp_server/tools/: __init__.py  hdx_tools.py
tests/: __init__.py  conftest.py
tests/integration/: test_all_tools.py  test_api_integration.py  test_http_transport.py
tests/security/: test_security_features.py
tests/unit/: test_custom_tools.py  test_server_functions.py
